2009-10-13  Andrés Gómez  <agomez@igalia.com>

	* ext/gst-camerabin/data/gdigicam-camerabin.conf: Modified default
	JPEG encoder from jpegenc to dspjpegenc.
	Fixes: NB#118043.

	* configure.ac: Removed warnings when not compiling for debugging.

2009-10-09  Andrés Gómez  <agomez@igalia.com>

	* tests/check-gdigicam-manager.c:
	(test_set_get_iso_sensitivity_mode_regular): Replaced the numeric
	value to define.
	(test_set_get_white_balance_mode_limit): Changed the return value
	to check for boolean and error.
	(test_set_get_white_balance_mode_regular): Replaced the numeric
	value to define.
	(test_set_get_focus_mode_invalid): Fixed checking the result
	value.
	(test_set_aspect_ratio_resolution_limit): Fixed the return values
	check.
	(test_set_aspect_ratio_resolution_regular): Corrected the
	expression value for gotten_aspect_ratio.
	Added defines for test values for white balance and ISO
	sensitivity.

	* src/gdigicam-manager.c:
	(g_digicam_manager_descriptor_copy): Fixed wrong copy on supported
	metering modes, overwriting the supported aspect ratios.

2009-09-30  Javier Fernández  <jfernandez@igalia.com>

	reviewed by: Andrés Gómez <agomez@igalia.com>

	* src/gdigicam-manager.c:
	(_picture_done): Fixed memory leak.
	Fixes: NB#137944.

2009-09-30  Andrés Gómez  <agomez@igalia.com>

	* configure.ac: Added "G_DISABLE_CAST_CHECKS" and
	"G_DISABLE_ASSERT" C flags to compilation with optimization.

2009-09-15  Miguel Gómez  <magomez@igalia.com>

	reviewed by: Andrés Gómez <agomez@igalia.com>

	* doc/reference/gdigicam-sections.txt: Added new API for warning
	messages.
	* src/gdigicam-debug.h: Added new macros for warning messages.
	* src/gdigicam-manager.h:
	* src/gdigicam-manager.c:
	(_g_digicam_manager_class_init): Added new "internal-error" signal
	to deal with GStreamer errors.
	(_g_digicam_manager_bus_callback): On GST_MESSAGE_ERROR message in
	the bus callback, set the bin inmediately to NULL state and notify
	any UI.
	Fixes: NB#135225.
